--- a/Alacritty/alacritty.yml
+++ b/Alacritty/alacritty.yml
@@ -1,4 +1,4 @@
-background_opacity: 0.85
+background_opacity: 0.8
 colors:
   bright:
     black: '#5e5c64'
@@ -21,11 +21,16 @@ colors:
   primary:
     background: '#171421'
     foreground: '#d0cfcc'
+  size: 12.0
 font:
   bold:
-    family: JetBrains Mono
+    family: JetBrainsMono Nerd Font
   italic:
-    family: JetBrains Mono
+    family: JetBrainsMono Nerd Font
   normal:
-    family: JetBrains Mono
+    family: JetBrainsMono Nerd Font
   size: 12.0
+window:
+  padding:
+    x: 8
+    y: 8
